# BetterReminder

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml  tauri.yml
server/: .env  index.ts  package-lock.json  package.json  tsconfig.json
src/: App.tsx  db_service.rs  index.css  main.tsx  mockApi.ts  types.ts
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  db_service.rs  lib.rs  main.rs
src/components/: AnimatedText.tsx  CalendarView.tsx  Confetti.tsx  DayPopover.tsx  DeadlineDisplay.tsx  Footer.tsx  Header.tsx  LanguageSwitcher.tsx  NotificationPrompt.tsx  NotificationTestButton.tsx  Sidebar.tsx  TaskCard.tsx  TaskForm.tsx  TaskList.tsx  ThemeToggle.tsx  TitleBar.tsx  Toast.tsx  index.ts
src/components/calendar/: CalendarCell.tsx  CalendarView.tsx  DayPopover.tsx  MonthNavigation.tsx  index.ts
src/components/common/: AnimatedText.tsx  Button.tsx  Card.tsx  DeadlineDisplay.tsx  LanguageSwitcher.tsx  Modal.tsx  index.ts
src/components/feedback/: Confetti.tsx  Toast.tsx  index.ts
src/contexts/: AppStateContext.tsx  LanguageContext.tsx  ResponsiveProvider.tsx  TaskContext.tsx  ThemeContext.tsx  ToastContext.tsx  index.tsx
src/data/: holidays.ts
src/hooks/: useLanguage.ts  useResponsive.ts  useScrollFooter.ts  useTasks.ts  useTheme.ts
src/locales/: translations.ts
src/services/: dbService.ts  dbServiceTauri.ts  holidayService.ts  notificationService.ts
src/services/api/: mockApi.ts
src/styles/: index.css
(+32 files in other folders)
